- reorganize source - fix minor css bug affecting calendar visibility - update some examples

--- a/src/flatpickr_base.less
+++ b/src/flatpickr_base.less
@@ -25,6 +25,7 @@
     margin-top: 3px;
     opacity: 0;
     z-index: 0;
+    visibility: hidden;
     overflow: hidden;
     -webkit-transition: opacity 75ms;
     transition: opacity 75ms;
@@ -35,6 +36,7 @@
 {
     z-index: 100;
     opacity: 1;
+    visibility: visible;
 }
 
 .inline .flatpickr-calendar
